--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -3,7 +3,34 @@ on:
   workflow_dispatch:
 
 jobs:
-   build:
+   release-project:
+    name: Release Project
+    runs-on: ubuntu-latest
+    needs: build-project
+    steps:
+      - name: Download site content
+        uses: actions/download-artifact@v2
+        with:
+          name: test-build
+      - name: Create GitHub release
+        id: create-new-release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+          asset_path: ./*.zip
+          asset_name: Aghisna${{ github.run_number }}.zip
+          asset_content_type: application/zip
+
+   build-project:
     runs-on: ubuntu-latest
 
     steps:
