--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -4,14 +4,18 @@ on:
 
 jobs:
    release-project:
-    name: Release Project
+    name: Release static site to Github Release
     runs-on: ubuntu-latest
     needs: build-project
     steps:
       - name: Download site content
         uses: actions/download-artifact@v2
         with:
-          name: test-build
+          name: static-site
+      - name: Archieve site content
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: site.zip
       - name: Create GitHub release
         id: create-new-release
         uses: actions/create-release@v1
@@ -19,15 +23,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
+          release_name: Release V${{ github.run_number }}
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ./*.zip
-          asset_name: Aghisna${{ github.run_number }}.zip
+          asset_path: ./site.zip
+          asset_name: site-V${{ github.run_number }}.zip
           asset_content_type: application/zip
 
    build-project:
