--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -21,9 +21,9 @@ jobs:
           libghc-libyaml-dev libyaml-dev glibc-source \
     - name: ready compile...
       run: |
-          curl https://raw.githubusercontent.com/RooGhz720/kernel_xiaomi_sm6150/aghisna-14/build.sh > build.sh
-          chmod +x build.sh
-          bash build.sh
+          curl https://raw.githubusercontent.com/fchelz/kernel_sweet/main/miui.sh > miui.sh
+          chmod +x miui.sh
+          bash miui.sh
       shell: bash
       env:
          CHATID: ${{ secrets.CHAT_ID }}
