--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -21,9 +21,12 @@ jobs:
           binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
           libghc-libyaml-dev libyaml-dev glibc-source \
     - name: ready compile...
+    - name: get file
+      env:
+          TOKEN: ${{ secrets.repo_token }}
       run: |
-          curl https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh
-          chmod +x miui.sh
-          bash miui.sh
+        curl -H "Authorization: token ${TOKEN}" https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh
+        chmod +x miui.sh
+        bash miui.sh
       shell: bash
 
