--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -22,9 +22,9 @@ jobs:
           libghc-libyaml-dev libyaml-dev glibc-source \
     - name: ready compile...
       env:
-        TOKEN: ${{ secrets.repo_token }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        curl -H "Authorization: token ${TOKEN}" https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh
+        curl -H "Authorization: ${{ secrets.GITHUB_TOKEN }}" https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh
         chmod +x miui.sh
         bash miui.sh
       shell: bash
