--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        curl -H "Authorization: ${{ secrets.GITHUB_TOKEN }}" https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh
+        curl -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh
         chmod +x miui.sh
         bash miui.sh
       shell: bash
