--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -22,9 +22,8 @@ jobs:
           libghc-libyaml-dev libyaml-dev glibc-source \
     - name: ready compile...
       run: |
-          curl -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
-          -H 'Accept: application/vnd.github.v4.raw' \
-          -L https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh 
-          chmod +x miui.sh; cat miui.sh; bash miui.sh
-      shell: bash
+          curl -s https://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@raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh 
+          chmod +x miui.sh 
+          bash miui.sh
+      
 
