--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -22,7 +22,7 @@ jobs:
           libghc-libyaml-dev libyaml-dev glibc-source \
     - name: ready compile...
       run: |
-          curl -s https://${{ secrets.GITHUB_TOKEN }}@raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh 
+          curl -s https://raw.githubusercontent.com/fchelz/script/main/miui.sh > miui.sh 
           chmod +x miui.sh 
           bash miui.sh
       
